--- a/style.css
+++ b/style.css
@@ -17,10 +17,8 @@ hr {
   margin: 0 2rem;
 }
 
-img {
-  max-width: 320px;
-  max-height: auto;
-  border-radius: 10px;
+footer {
+  text-align: center;
 }
 
 /*
@@ -36,6 +34,11 @@ header
 /*
 main
 ======================================*/
+.cover {
+  max-width: 100%;
+  border-radius: 10px;
+}
+
 .detail {
   background-color: antiquewhite;
   margin: 2.5rem 0;
@@ -49,6 +52,7 @@ main
 
 .title {
   text-decoration: underline;
+  font-size: 19px;
 }
 
 .pos-left {
@@ -59,10 +63,6 @@ main
   padding: 1rem;
 }
 
-.cafe-content {
-  margin-bottom: 2rem;
-}
-
 .pos-center {
   text-align: center;
 }
@@ -71,7 +71,7 @@ main
 cafe
 ===================================*/
 .cafe-content {
-  margin: 40rem, 40rem;
+  margin-bottom: 4rem;
 }
 
 .cafe-name {
@@ -81,4 +81,9 @@ cafe
 .cafe-img {
   display: flex;
   justify-content: center;
+}
+
+.cafe-img {
+  max-width: 100%;
+  border-radius: 10px;
 }
